Changelog
=========

1.0b5 (2010-03-20)
------------------

- Show 100 recent activity items instead of only 5 in the recent activity view. [timo]
- Show user id if no user name is available. [timo]


1.0b4 (2010-02-05)
------------------

- Fix time not showing up in recent activity Viewlet. [timo]
- Show full user name if available. [timo]
- Remove 'User ...' from recent activity Viewlet and Portlet. [timo]


1.0b3 (2010-01-29)
------------------

- Show a portrait of the user next to the user's recent activity in the
  Viewlet. [timo]


1.0b2 (2010-01-27)
------------------

- Fix "iteration over non-sequence" error, when there are no recent 
  activities. [timo]


1.0b1 (2009-12-11)
------------------

- Catalan and German translation added. [timo]
- Limit for items to show up in viewlet/portlet fixed. [timo]
- Bugfix: time was not shown in the recent activity portlet. [timo]


1.0a1 (2009-11-23)
------------------

- Initial release. [timo]